--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "start": "node build/src/index.js",
     "dev": "tsc -w",
     "prepublishOnly": "npm run build",
-    "test": "jest"
+    "test": "jest",
+    "observe": "npm run build && npx @modelcontextprotocol/inspector ts-node build/index.js"
   },
   "keywords": [
     "mcp",
